<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/movie"
            android:icon="@drawable/ic_video_library"
            android:title="@string/movie" />
        <item
            android:id="@+id/music"
            android:icon="@drawable/ic_library_music"
            android:title="@string/music" />
        <item
            android:id="@+id/book"
            android:icon="@drawable/ic_library_books"
            android:title="@string/book" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>
</menu>