<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".view.add_product.AddProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/movie_detail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/input_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/music"
                        android:textColor="#000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.example.mitrais.onestopclick.custom_view.CustomImageView
                        android:id="@+id/img_thumbnail"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txt_edit_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"
                            android:inputType="text"
                            android:textColor="#000" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_artist"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txt_edit_artist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/artist"
                            android:inputType="text"
                            android:textColor="#000" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/rg_type">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txt_edit_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:hint="@string/description"
                            android:imeOptions="actionDone"
                            android:inputType="textMultiLine"
                            android:maxLines="5"
                            android:textColor="#000" />
                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:padding="8dp"
                        android:weightSum="100">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="30"
                            android:text="@string/genre" />

                        <Spinner
                            android:id="@+id/sp_genre"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="70" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_label_your_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/your_rating"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/txt_views" />

                        <RadioGroup
                            android:id="@+id/rg_rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/rb_1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1" />

                            <RadioButton
                                android:id="@+id/rb_2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_2" />

                            <RadioButton
                                android:id="@+id/rb_3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_3" />

                            <RadioButton
                                android:id="@+id/rb_4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_4" />

                            <RadioButton
                                android:id="@+id/rb_5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_5" />
                        </RadioGroup>
                    </LinearLayout>

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_save"
                        style="@style/GreenButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/save" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/music_file_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_detail_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.example.mitrais.onestopclick.custom_view.CustomMusicView
                        android:id="@+id/music_view"
                        android:layout_width="match_parent"
                        android:layout_height="200dp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_upload_music"
                        style="@style/OrangeButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/upload_music" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />
</RelativeLayout>
